<resources>
    <string name="app_name">Indicar Tuning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1228514043878949</string>
    <string name="fb_login_protocol_scheme">fb1228514043878949</string>
    <string name="kakao_app_key">be2b15c91901a83730e1cc907a1ab965</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="line_channel_id">1586805168</string>
    <string name="strVersionErr">버전이 맞지 않습니다.</string>
    <string name="strNoInternet">기기가 인터넷에 연결되지 않았습니다. 인터넷에 연결해주십시오.</string>
    <string name="strLoginedErr">로그인 정보를 제대로 불러오지 못했습니다. 다시 로그인해주세요.</string>
    <string name="strAddUserSuccess">회원가입에 성공했습니다.</string>
    <string name="strCancelLogin">로그인을 취소하셨습니다.</string>
    <string name="strNoSearchResultErr">해당하는 검색 결과가 없습니다.</string>
    <string name="strCarLoadErr">차량을 불러오는 데 실패했습니다. 다시 시도해 주세요.</string>
    <string name="strNoCar">아직 등록된 자동차가 없습니다.</string>
    <string name="strUnlink">회원님의 계정이 탈퇴처리되었습니다. 그동안 저희 서비스를 이용해 주셔서 감사합니다.</string>
    <string name="strUserInfoChanged">유저 정보를 변경했습니다.</string>
    <string name="strErrwithCode">오류가 발생했습니다: </string>
    <string name="strServerCheck">서버 점검중입니다.</string>
    <string name="strNotPrepare">준비중인 기능입니다. 차후 업데이트에서 만나보실 수 있습니다.</string>
    <string name="strNotAllowUpdateUser">유저 닉네임은 직전 변경일로부터 7일이 지나야 바꿀 수 있습니다.</string>
    <string name="strTooLongNickname">닉네임은 한글 10자, 영어 20자 이내여야 합니다.</string>
    <string name="strBackpressed">뒤로 버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="strgetUserInfoError">유저 정보를 불러오지 못했습니다: </string>
    <string name="strPermissionDenied">필수 권한을 거절하시면 앱을 이용하실 수 없습니다.\n[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="strWhatPermissionDeny">권한 거부\n</string>
    <string name="AllianceSuccess">제휴요청이 성공적으로 처리되었습니다.</string>
    <string name="SignoutFail">죄송합니다. 탈퇴 처리 도중 오류가 발생했습니다: </string>
    <string name="SuggestSuccess">의견을 보내주셔서 감사합니다.</string>
    <string name="lastPage">마지막 페이지입니다.</string>
    <string name="reportReason">신고사유를 입력해주세요.</string>
    <string name="reportSuccess">신고가 접수되었습니다.</string>
    <string name="wantToDelete">이 게시글을 정말로 삭제하시겠습니까?</string>
    <string name="wantToDeleteSub">한 번 삭제하면 복구할 수 없습니다.</string>
    <string name="deletesubtitle">Delete this post</string>
    <string name="noExistPost">존재하지 않는 게시물입니다.</string>
    <string name="commentModify">댓글 수정</string>
    <string name="commentDelete">댓글 삭제</string>
    <string name="commentReport">부적절한 댓글 신고</string>
    <string name="deleteSlide">현재 슬라이드를 정말로 삭제하시겠습니까?</string>
    <string name="deleteSlideSub">Delete this slide.</string>
    <string name="deletePhoto">사진을 정말로 삭제하시겠습니까?</string>
    <string name="deletePhotoSub">Delete this photo.</string>
    <string name="selectCar">선택된 차량 : </string>
    <string name="selectNoCar">선택된 차량 : 없음</string>
    <string name="selectCategory">카테고리를 선택해주세요.</string>
    <string name="stopWriting">글 작성을 그만두시겠습니까?</string>
    <string name="stopWritingSub">작성한 내용은 모두 삭제됩니다.</string>
    <string name="makingList">리스트 생성중...</string>
    <string name="needPhoto">사진을 등록해주세요.</string>
    <string name="cannotAddPage">페이지를 더이상 추가할 수 없습니다.</string>
    <string name="cannotDeletePage">페이지를 더이상 삭제할 수 없습니다.</string>
    <string name="failedRegisterPost">게시물 등록에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="failedModifyPost">게시물 수정에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="cmTab1">인기순</string>
    <string name="cmTab2">전체순</string>
    <string name="minutes">분 전</string>
    <string name="hours">시간 전</string>
    <string name="failedHandleImage">이미지를 처리하던 중 오류가 발생하였습니다. 다시 시도해주세요.</string>
    <string name="canceled">취소 되었습니다.</string>
    <string name="boardAll">전체</string>
    <string name="boardDaylife">자유, 일상</string>
    <string name="boardMarket">중고, 판매</string>
    <string name="boardDiy">시공, DIY</string>
    <string name="boardTest">테스트</string>
    <string name="noticeTitle">공지사항</string>
    <string name="tuning2Hint">브랜드 및 차량을 검색하세요.</string>
    <string name="communityHint">검색어를 입력하세요.</string>
    <string name="deleteAccountCheck">회원탈퇴 후에는 계정 정보 복구가 불가합니다.\n정말로 회원을 탈퇴하시겠습니까?</string>
    <string name="deleteAccountSub">Delete my account.</string>
    <string name="editNameTitle">이름 (닉네임)</string>
    <string name="editNameHint">이름 또는 닉네임을 입력하세요.</string>
    <string name="editButton">확인</string>
    <string name="strNoName">이름</string>
    <string name="strNoEmail">이메일 없음</string>
    <string name="strNoAddress">주소 없음</string>
    <string name="strEventAlarm">이벤트알람</string>
    <string name="strEventAlarmExp">이벤트, 프로모션 관련 알람</string>
    <string name="strOtherAlarm">기본 및 기타알림</string>
    <string name="strOtherAlarmExp">차량 및 부품 업데이트 등 기본적 알림</string>
    <string name="strClause">이용약관</string>
    <string name="strSuggest">의견보내기</string>
    <string name="strDeleteAccount">회원탈퇴</string>
    <string name="strLogout">로그아웃</string>
    <string name="strPartner1">업체 분류</string>
    <string name="strPartner2">업체,회사,기관명칭</string>
    <string name="strPartner3">연락처 혹은 이메일 주소</string>
    <string name="strPartner4">제휴요청 사유</string>
    <string name="strBoardAlllike">좋아요</string>
    <string name="strBoardAllcomment">댓글</string>
    <string name="strBoardNumberUnit">개</string>
    <string name="strBoardDetailcomment">댓글을 입력해주세요.</string>
    <string name="strKakaoLoginStop">카카오톡 로그인을 중지합니다: </string>
    <string name="strAddUserFail">해당 이메일로 가입된 계정이 이미 존재합니다. 원래 계정으로 로그인 해주시기 바랍니다.</string>
    <string name="strRequestEmailSent">입력하신 이메일로 인증 메일을 보냈습니다. 메일함을 확인해주세요.</string>
    <string name="strRequestEmailWait">이메일 인증이 완료되지 않았습니다. 메일함을 확인해주세요.</string>
    <string name="strRequestEmailCancel">이용자께서 다른 이메일 인증을 요청한 관계로 기존의 이메일 인증이 취소되었습니다. 새로 회원가입 해주세요.</string>
    <string name="strRequestEmailError">이메일 인증 과정에서 오류가 발생했습니다. 다시 시도해 주세요. 이용에 불편을 드려 죄송합니다.</string>
    <string name="strEmailexisted1">해당 이메일로 가입한 계정이 존재합니다.(</string>
    <string name="strEmailexisted2">) 원래 계정으로 로그인 해주시기 바랍니다.</string>
    <string name="strEmailexisted3">) 다른 이메일을 입력해 주시기 바랍니다.</string>
    <string name="strSignoutErr">회원탈퇴 과정에서 오류가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="strSignoutSuccess">회원탈퇴에 성공했습니다. 이용해 주셔서 감사합니다.</string>
    <string name="strTooShortNickname">닉네임은 한글 2자, 영어 4자 이상이어야 합니다.</string>
    <string name="strAddUserErr">회원가입 처리 도중 오류가 발생하였습니다. 다시 시도해 주세요.</string>
    <string name="strThereisNoEmail">사용자의 이메일을 입력해주세요.</string>
    <string name="strWarningData">"NOTICE\n\n차량을 내려받습니다. 소량의 데이터 통화료가 발생합니다. WIFI 환경에서 진행하는 것을 권장합니다. 한 번 차량을 다운받으시면, 다음부터는 로딩 없이 이용 가능합니다.\n(단, 업데이트가 있을 경우 제외)\n\n앞으로 나오는 모든 이미지와 기타 결과물은 상업적 용도로 사용하실 수 없으며, 그 권리는 자사와 기타 업체들에게 있습니다. 이용을 원하시는 경우, 문의 주시기 바랍니다. 상업적 용도 외에 개인적인 사용은 허가합니다. 감사합니다."</string>
    <string name="versionLink">http://13.125.173.118:9000/version/version</string>
    <string name="check_User">http://13.125.173.118:9000/user/search_user</string>
    <string name="add_User">http://13.125.173.118:9000/user/add_user</string>
    <string name="update_User">http://13.125.173.118:9000/user/updt_user</string>
    <string name="delete_User">http://13.125.173.118:9000/user/remove_user</string>
    <string name="getCarLink">http://13.125.173.118:9000/car/get_car</string>
    <string name="carDBLink">http://13.125.173.118:9000/carSpec/list</string>
    <string name="traceLikeResult">http://13.125.173.118:9000/selectUserLikeBoardArticle</string>
    <string name="traceWritingResult">http://13.125.173.118:9000/selectUserBoardArticles</string>
    <string name="clause">https://m.cafe.naver.com/ArticleRead.nhn?clubid=29055312&amp;articleid=7&amp;page=1&amp;boardtype=L&amp;menuid=15</string>
    <string name="opinion">https://m.cafe.naver.com/SimpleArticleList.nhn?search.clubid=29055312&amp;search.menuid=23&amp;search.moreDirection=next</string>
    <string name="facebookGraphApi">"https://graph.facebook.com/"</string>
    <string name="http">http://</string>
    <string name="company">company</string>
    <string name="img_url">img_url</string>
    <string name="car_name">car_name</string>
    <string name="car_name_kor">car_name_kor</string>
    <string name="company_kor">company_kor</string>
    <string name="audi">AUDI</string>
    <string name="benz">BENZ</string>
    <string name="bmw">BMW</string>
    <string name="chevrolet">CHEVROLET</string>
    <string name="hyundai">HYUNDAI</string>
    <string name="kia">KIA</string>
    <string name="Volkswagen">VOLKSWAGEN</string>
    <string name="AccountTitle">무엇을 도와드릴까요?</string>
    <string name="AccountSub">이용하려는 기능을 선택하세요.</string>
    <string name="AccountNoAddress">주소 없음</string>
    <string name="BasketTitle">장바구니</string>
    <string name="BasketSub">저장한 견적 살펴보기</string>
    <string name="HowtouseTitle">이용방법</string>
    <string name="HowtouseSub">앱의 이용방법 보기</string>
    <string name="AllianceTitle">제휴요청</string>
    <string name="AllianceSub">회사에 제휴요청하기</string>
    <string name="LogoutTitle">로그아웃</string>
    <string name="LogoutSub">앱에서 로그아웃</string>
    <string name="LikeTitle">좋아요</string>
    <string name="LikeSub">좋아요 누른 글 목록</string>
    <string name="MywritingTitle">내 글</string>
    <string name="MywritingSub">내가 쓴 글 목록</string>
    <string name="MycommentTitle">내 댓글</string>
    <string name="MycommentSub">내가 쓴 댓글 목록</string>
    <string name="server_not_available">http request failure 서버 응답없음 ---------------</string>
    <string name="data_not_available">response data not available 데이터 처리 오류 ---------------</string>
    <string name="photo_from_storage_not_available">photo from storage not available 저장소에서 사진 불러오기 오류 ---------------</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="filter_board_type_label">&lt; 게시글 유형 &gt;</string>
    <string name="filter_car_type_label">&lt; 차량의 종류 &gt;</string>
    <string name="search_box_hint">검색어를 입력하세요.</string>
    <string name="Splash_wait">잠시만 기다려주세요</string>
</resources>