<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="activity"
            type="com.iindicar.indicar.b4_account.EditProfileActivity"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvA_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editNameTitle" />

            <EditText
                android:id="@+id/input_name"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:singleLine="true"
                android:hint="@string/editNameHint"
                android:text="@{activity.inputUserName}"/>

            <Button
                android:id="@+id/button_submit"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/editButton"
                android:onClick="@{(v) -> activity.onSubmitClicked()}"
                android:textSize="15sp"
                android:textColor="@color/cardview_dark_background"
                android:background="@color/profileButtonBackground"/>

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="@{activity.isLoading}"
            android:id="@+id/pbA_Loading"/>

    </FrameLayout>
</layout>