<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="com.iindicar.indicar.b2_community.BoardFilterActivity"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/border_underline">

            <ImageButton
                android:id="@+id/button_back"
                style="@style/imageButtonCustomStyle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/btn_back"/>

            <EditText
                android:id="@+id/search_text"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search_box_hint"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:text="@{activity.searchInputText}"
                android:textColor="@color/colorFont"
                android:textSize="15sp" />

            <ImageButton
                style="@style/imageButtonCustomStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/icon_search"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_posttype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/filter_board_type_label"
                android:textColor="@color/colorFont"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_filter_all"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/filter_selector"
                    android:onClick="@{(v) -> activity.onBoardFilterSelected(0)}"
                    android:text="@string/boardAll"
                    android:textSize="11.5sp"
                    app:setSelected="@{activity.isBoardFilterSelected[0]}" />

                <Button
                    android:id="@+id/button_filter_free"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/filter_selector"
                    android:onClick="@{(v) -> activity.onBoardFilterSelected(1)}"
                    android:text="@string/boardDaylife"
                    android:textSize="11.5sp"
                    app:setSelected="@{activity.isBoardFilterSelected[1]}" />

                <Button
                    android:id="@+id/button_filter_sell"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/filter_selector"
                    android:onClick="@{(v) -> activity.onBoardFilterSelected(2)}"
                    android:text="@string/boardMarket"
                    android:textSize="11.5sp"
                    app:setSelected="@{activity.isBoardFilterSelected[2]}" />

                <Button
                    android:id="@+id/button_filter_diy"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/filter_selector"
                    android:onClick="@{(v) -> activity.onBoardFilterSelected(3)}"
                    android:text="@string/boardDiy"
                    android:textSize="11.5sp"
                    app:setSelected="@{activity.isBoardFilterSelected[3]}" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_cartype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/filter_car_type_label"
                android:textColor="@color/colorFont"
                android:textSize="13sp" />

            <FrameLayout
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:onClick="@{(v) -> activity.onCarSearchClicked()}"
                android:background="@drawable/border_box_shadow">

                <TextView
                    android:id="@+id/text_carbrandHint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="@{(v) -> activity.onCarSearchClicked()}"
                    android:singleLine="true"
                    android:text="@string/tuning2Hint"
                    android:textColor="@color/colorFont"
                    android:textSize="14sp" />

                <ImageView
                    style="@style/imageButtonCustomStyle"
                    android:layout_gravity="right|center_vertical"
                    android:padding="3dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:onClick="@{(v) -> activity.onCarSearchClicked()}"
                    android:src="@drawable/btn_search"/>

            </FrameLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_selected_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selectCar"
                    android:textColor="@color/colorFont"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorFont"
                    android:text="@{activity.selectedCarFilter}"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>