<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.iindicar.indicar.data.vo.BoardFileVO"/>

        <variable
            name="board"
            type="com.iindicar.indicar.data.vo.BoardDetailVO"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imageview_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:imageUrl="@{item.fileUrl}"/>

        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageButton
                style="@style/imageButtonCustomStyle"
                android:id="@+id/imagebutton_user_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                app:circleImageUrl="@{board.userProfileUrl}"/>

            <TextView
                style="@style/textViewBoardInfoStyle"
                android:id="@+id/textview_user_name"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:background="@color/colorPrimary"
                android:text="@{board.userName}"/>

            <TextView
                android:layout_margin="3dp"
                android:textColor="@color/colorFont"
                android:id="@+id/text_board_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="12sp"
                app:boardName="@{board.boardType}"/>

            <ImageButton
                android:id="@+id/button_menu"
                style="@style/imageButtonCustomStyle"
                android:layout_gravity="center_vertical"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_menu"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tvBDH_like"
                style="@style/textViewBoardInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorFontLight"
                android:text="@string/strBoardAlllike"/>

            <TextView
                style="@style/textViewBoardInfoStyle"
                android:id="@+id/textview_like_count"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorFontLight"
                android:text="@{board.likeCount}"/>

            <TextView
                android:id="@+id/tvBDH_unit1"
                style="@style/textViewBoardInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFontLight"
                android:layout_gravity="center_vertical"
                android:text="@string/strBoardNumberUnit"/>

            <TextView
                android:id="@+id/tvBDH_comment"
                style="@style/textViewBoardInfoStyle"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/strBoardAllcomment"
                android:textColor="@color/colorFontLight"
                android:gravity="center_vertical"/>

            <TextView
                style="@style/textViewBoardInfoStyle"
                android:id="@+id/textview_comment_count"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorFontLight"
                android:text="@{board.commentCount}"/>

            <TextView
                android:id="@+id/tvBDH_unit2"
                style="@style/textViewBoardInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorFontLight"
                android:text="@string/strBoardNumberUnit"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                style="@style/textViewBoardInfoStyle"
                android:id="@+id/lastDate"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/colorFontLight"
                app:date="@{board.firstDate}"/>

        </LinearLayout>

        <TextView
            style="@style/textViewBoardContentStyle"
            android:id="@+id/textview_main"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.fileContent}"/>

    </LinearLayout>
</layout>